<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DetailActivity">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/placeholder_image" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomLayout"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/default_price"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/icBack"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/icon_bg"
        android:padding="10dp"
        android:src="@drawable/ic_back" />

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/icon_bg"
        android:padding="10dp"
        android:src="@drawable/ic_menu" />

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/product_detail_bg"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/upAndDownArrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:src="@drawable/ic_up_arrow" />

        <androidx.cardview.widget.CardView
            android:id="@+id/shareButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/upAndDownArrow"
            android:elevation="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_share"
                app:tint="@color/app_color_light" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/upAndDownArrow"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/shareButton"
            android:background="@drawable/button_shape"
            android:text="@string/login_button_title"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shareButton"
            android:layout_marginTop="20dp"
            android:text="Description"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/descriptionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionLabel"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/product_description"
            android:textSize="16sp"
            android:textStyle="italic" />

        <RelativeLayout
            android:id="@+id/reviewsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionValue"
            android:layout_marginTop="10dp"
            android:background="@drawable/reviews_bg">

            <TextView
                android:id="@+id/tvReviewsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Reviews(0)"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvReviewsCount"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:text="0.00"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <LinearLayout
                    android:id="@+id/ratingLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleX="0.75"
                    android:scaleY="0.75">

                    <RatingBar
                        android:id="@+id/productRb"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:theme="@style/RatingBar" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>